# Advanced-Algorithms

./: .gitignore  README.md
A01633819-A01367610_Act3.1/: Trie.h  a.out  main.cpp
A01633819-A01367610_Act3.1/src/: Trie.h
A01633819-A01367610_Act3.2/: a.out  main.cpp
A01633819-A01367610_Act3.2/Inputs/: test_2.txt  test_4.txt
A01633819-A01367610_Act3.2/src/: Utils.h
A01633819-A01367610_Act3.3/: a.out  main.cpp
A01633819-A01367610_Act3.3/inputs/: test_1.txt  test_3.txt  test_4.txt  test_5.txt
A01633819-A01367610_Act3.3/src/: Utils.h
A01633819-A01367610_Act3.4/: a.out  main.cpp
A01633819-A01367610_Act3.4/Inputs/: test_3.txt  test_4.txt  test_5.txt
A01633819-A01367610_Act3.4/src/: Utils.h
A01633819-A01367610_Act4.1/: README.md  exec  main.cpp
A01633819-A01367610_Act4.1/inputs/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt
A01633819-A01367610_Act4.1/src/: Utils.h
A01633819-A01367610_Act4.2/: CMakeLists.txt  README.md  exec  main.cpp  sdl-config.cmake
A01633819-A01367610_Act4.2/inputs/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt
A01633819-A01367610_Act4.3/: main.cpp
A01633819-A01367610_Act4.3/inputs/: test_1.txt  test_2.txt  test_3.txt  test_4.txt
A01633819-A01367610_Act4.3/src/: Utils.h
A01633819_A01367610_Act.1.1/: README.md  a.out  main.cpp
A01633819_A01367610_Act.1.1/inputs/: test_1.txt  test_6.txt
A01633819_A01367610_Act.1.2/: README.md  a.out  main.cpp
A01633819_A01367610_Act.1.2/inputs/: test_1.txt  (+4 more)
Act.1.1_MergeSort/: README.md  main.cpp
ActInt.1/: a.out  main.cpp
ActInt.2/: exec  main.cpp
(+25 files in other folders)
